# 2025-reproducibility-hackathon

./: README.md  mkdocs.yml  pixi.toml  pyproject.toml
docs/: .pages
docs/notes/: .pages.yml  finding-data.md  index.md  licenses.md
docs/reproduce/: get-data.sh
src/: __init__.py
tests/: conftest.py
