[project]
authors = [
    {name = "Alex Maldonado", email = "alex@oasci.org"}
]
description = "2025 Reproducibility hackathon"
name = "reprohack"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"

# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "loguru>=0.7.2,<0.8",
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
